--- a/source/assets/stylesheets/scss/components/_notification.scss
+++ b/source/assets/stylesheets/scss/components/_notification.scss
@@ -46,8 +46,10 @@ $warningColor: #fbbd08;
 
     @media screen and (max-width: 768px) {
       width: 90%;
-      top: 65px;
-      left: 50%;
+      top: 65px !important;
+      left: 50% !important;
+      right: auto !important;
+      bottom: auto !important;
       transform: translateX(-50%);
 
       .ui.icon.message {
